# cardealer-kotlin-swift-rust-psql-llm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  db.yml
api/: openapi.yaml
docs/: README.ar.md  README.fa.md  README.ru.md  README.sv.md  README.zh.md
frontend/: UI_STRUCTURE.md
frontend/android/: ProjectStructure.kt  VehicleReport.kt
frontend/ios/: ProjectStructure.swift  VehicleReport.swift
k8s/argocd/: production.yaml  staging.yaml
k8s/base/: configmap.yaml  database.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml.template  service.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: 20260302000001_create_vehicles.sql  20260302000002_create_ownership_history.sql  20260302000003_create_inspections.sql  20260302000004_create_recalls.sql  20260302000005_create_reports.sql  20260302000006_seed_dev_test_data.sql  20260302000007_create_listings.sql  20260303000008_change_numeric_to_double.sql
src/: ai.rs  cache.rs  config.rs  db.rs  external.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs
